# Feasible-Image-Authentication-Scheme-for-Content-Integrity

./: .gitignore  Cargo.toml  README.md
benchmark/: README.md
benchmark/src/: wasm.rs
circuits/: README.md  no_round.circom  package.json
circuits/circuits/: bright.circom  crop.circom  grayscale.circom  grayscale_no_round.circom  resize.circom  round.circom  squares.circom
circuits/scripts/: buildCircuits.mjs  compileCrop.sh  compileGrayscale.sh  compileGrayscaleNoRound.sh  compileResize.sh  compileSquares.sh
src/: main.rs
